initial validation for comments
