# controllers/comments.js
@@ -5,7 +5,7 @@ const getComments = async (req, res) => {
     try {
         const recipeId = req.params.recipeId;
         const db = mongodb.getDb();
-        const comments = await db.collection('comments').find({ recipeId: recipeId }).toArray();
+        const comments = await mongodb.getDb().db().collection('comments').find({ recipeId: recipeId }).toArray();
         res.status(200).json(comments);
     } catch (err) {
         res.status(500).json({ message: err.message });
@@ -16,20 +16,20 @@ const addComment = async (req, res) => {
     try {
         const recipeId = req.params.recipeId;
         // Fetch the user from the users collection
-       /* const user = await mongodb.getDb().db().collection('users').findOne({ _id: new ObjectId(req.body.userId) });
-       
+        const user = await mongodb.getDb().db().collection('users').findOne({ _id: new ObjectId(req.body.user) });
+       console.log(user)
         if (!user) {
             return res.status(404).json({ message: 'User not found' });
-        }*/
+        }
         const comment = {
             recipeId: recipeId,
-           /* userId:{
+            userId:{
                 id: user._id,
                 username: user.username,
                 firstName: user.firstName,
                 lastName: user.lastName,
-            },*/
-            user: req.body.user,
+            },
+            //user: req.body.user,
             text: req.body.text,
             createdAt: new Date()
         };
