# routes/comments.js
@@ -1,14 +1,16 @@
 const express = require('express');
 const router = express.Router();
 const commentsController = require('../controllers/comments');
+const validator = require('../Utilities/valdiation');
+const { requiresAuth } = require('express-openid-connect');
 
 // Get all comments for a recipe
 router.get('/:recipeId', commentsController.getComments);
 
 // Add a new comment
-router.post('/:recipeId', commentsController.addComment);
+router.post('/:recipeId', validator.saveComment,/* requiresAuth(),*/commentsController.addComment);
 
 // Delete a comment
-router.delete('/:recipeId/:commentId', commentsController.deleteComment);
+router.delete('/:recipeId/:commentId',/* requiresAuth(),*/ commentsController.deleteComment);
 
 module.exports = router;
