# swagger.json
@@ -331,14 +331,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-
-    "/savedRecipe/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-
           }
         }
       },
@@ -346,37 +338,89 @@
         "description": "",
         "parameters": [
           {
-
             "name": "recipeId",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
-
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-
-
                 "user": {
                   "example": "any"
                 },
                 "text": {
-
-                "recipeID": {
                   "example": "any"
-                },
-                "userID": {
-
-
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/comments/{recipeId}/{commentId}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "recipeId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/savedRecipe/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
                 "recipeId": {
                   "example": "any"
                 },
                 "userId": {
-
                   "example": "any"
                 }
               }
@@ -399,20 +443,6 @@
         }
       }
     },
-
-    "/comments/{recipeId}/{commentId}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "recipeId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "commentId",
-
     "/savedRecipe/{id}": {
       "get": {
         "description": "",
@@ -435,26 +465,14 @@
         "parameters": [
           {
             "name": "id",
-
             "in": "path",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
-
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-
           "204": {
             "description": "No Content"
-
           }
         }
       }
